# orix-poc-new

./: .env.example  .gitignore  Dockerfile  README.md  app.py  config.py  excel_output_template.xlsx  process_pdf_document.py  pyproject.toml  requirements.txt
.github/workflows/: dev-release.yaml  qa-release.yaml
benchmarks/: .gitignore  config.py  inference.py  output_models.py  prompt.py  pyproject.toml
server/: .dockerignore  .env.example  Dockerfile  app.py  config.py  constants.py  excel_output_template.xlsx  process_pdf_document.py  pyproject.toml
server/services/: azure_ocr.py  openai_request.py  response_formatter.py
server/utils/: calculate_confidence_score_and_coordinates_list.py  calculate_totals.py  common.py  cosmos_db_op.py  decorators.py  excel_utils.py  helpers.py  init_prompts.py  json_to_xlsx.py  logger_util.py  m_graph.py  prompt.py  s3_upload.py
services/: extractor.py  financial_prompt_updater.py  openai_request.py  response_formatter.py
utils/: calculate_confidence_score_and_coordinates_list.py  calculate_totals.py  cosmos_db_op.py  excel_utils.py  init_prompts.py  json_to_xlsx.py  m_graph.py  prompt.py  s3_upload.py
