[project]
name = "orix-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aioboto3==13.1.1",
    "aiofiles>=24.1.0",
    "amazon-textract-caller==0.2.3",
    "amazon-textract-response-parser==1.0.2",
    "amazon-textract-textractor==1.7.10",
    "azure-ai-documentintelligence==1.0.0b2",
    "azure-ai-formrecognizer==3.3.3",
    "azure-common==1.1.28",
    "azure-core==1.30.2",
    "azure-cosmos==4.7.0",
    "azure-identity==1.17.1",
    "azure-storage-blob>=12.24.0",
    "boto3>=1.34.131",
    "fastapi>=0.115.6",
    "fuzzywuzzy>=0.18.0",
    "httpx==0.27.2",
    "langchain==0.0.335",
    "numpy==1.26.4",
    "openai==1.26.0",
    "openpyxl==3.1.2",
    "pandas==2.2.2",
    "pillow==10.3.0",
    "pymupdf==1.24.4",
    "python-decouple==3.8",
    "python-dotenv==1.0.1",
    "python-multipart>=0.0.20",
    "streamlit-pdf-reader>=0.0.5",
    "streamlit-pdf-viewer>=0.0.19",
    "streamlit==1.32.2",
    "uvicorn>=0.34.0",
    "xlsxwriter==3.2.0",
]
