[project]
name = "benchmarks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.12",
    "langchain-azure-ai>=0.1.0",
    "langchain-openai>=0.2.12",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.7.0",
]
